Fix typo in syllabus

--- a/syllabus.tex
+++ b/syllabus.tex
@@ -352,7 +352,7 @@ ECON 550, ECON 551
     \item ``Machine Learning Methods Economists Should Know About.''Athey S, Imbens G.  (2019)
     \item ``Predictably Unequal? The Impact of Machine Learning on Credit Markets'' Fuster et al. (2020)
     \item ``Estimation and Inference of Heterogeneous Treatment Effects using Random Forests'' Athey and Wager (2019)
-    \item 
+    \item ``Deep Neural Networks for Estimation and Inference'' Ferrell, Liang and Misra (2020)
     \end{itemize}
   \item Unsupervised ML
     \begin{itemize}
@@ -378,7 +378,7 @@ ECON 550, ECON 551
 \vskip.15in
 \noindent\textbf{Class Policy:}  
 \begin{itemize}
-\item Regular attendance is not required, due to Covid circumstances, but it preferred. 
+\item Regular attendance is not required, due to Covid circumstances, but is preferred. 
 \end{itemize}
 
 %%%%%% THE END 
